[ADD] 고객지원 -> 비밀글일 때, 본인이 쓴글 혹은 관리자는 볼 수 있도록 처리, 내가 쓴글이 아니라면 비밀번호 입력창 띄우기(내일 개발 예정)

--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -84,10 +84,16 @@
                 name="title"
                 th:value="${boardInfo != null ? boardInfo.boardTitle : ''}"
               />
-              <div>
-                <input type="checkbox" id="checkbox" name="checkbox" />
-                <label id="secret-check" for="checkbox">비밀글</label>
-              </div>
+            </div>
+            <div id="secret-wrapper" style="display: none">
+              <input type="checkbox" id="checkbox" name="checkbox" />
+              <label id="secret-check" for="checkbox">비밀글</label>
+              <input
+                type="password"
+                placeholder="비밀글 설정시 비밀번호를 입력해주세요."
+                id="board-pw"
+                name="boardPw"
+              />
             </div>
           </div>
         </div>
@@ -126,7 +132,7 @@
             ["table", ["table"]],
             ["para", ["ul", "ol", "paragraph"]],
             ["height", ["height"]],
-            ["insert", ["picture", "link", "video"]],
+            ["insert", ["picture", "link"]],
             ["view", ["codeview", "fullscreen", "help"]],
           ],
           fontNames: [
