--- a/semiProject/src/main/resources/templates/admin/noticeManage.html
+++ b/semiProject/src/main/resources/templates/admin/noticeManage.html
@@ -6,8 +6,7 @@
 
     <!-- 관리자 전용 공지사항 작성 버튼 -->
     <!-- 기존 board 글쓰기 기능 재사용 (boardCode = 4) -->
-    <a href="/board/write?boardCode=4"
-       class="btn-write">
+    <a href="/board/write?boardCode=4" class="btn-write">
       글작성
     </a>
   </div>
@@ -145,8 +144,8 @@
       </li>
     </ul>
   </div>
-  
-  <!-- ================= 검색 영역 ================= -->
+
+  <!-- ================= 검색 ================= -->
   <div class="search-area">
     <form action="/admin/notice" method="get">
       <select name="key" id="search-box">
