내 작업 적용: header 수정 및 info 게시판 관련 추가

--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -30,10 +30,17 @@
 			<nav id="nav">
 				<ul id="navigation">
 					<th:block th:each="boardType : ${application.boardTypeList}">
-						<!-- 일반 게시판 -->
-						<li class="navList" th:if="${boardType.boardCode != 6}"><a
-							th:href="@{/board/{boardCode}(boardCode=${boardType.boardCode})}"
-							th:text="${boardType.boardName}"> </a></li>
+
+					<!-- 정보게시판 -->
+					<li class="navList" th:if="${boardType.boardCode == 2}">
+						<a th:href="@{/info/list}" th:text="${boardType.boardName}"></a>
+					</li>
+
+					<!-- 일반 게시판 -->
+					<li class="navList" th:if="${boardType.boardCode != 2 and boardType.boardCode != 6}">
+						<a th:href="@{/board/{boardCode}(boardCode=${boardType.boardCode})}"
+						th:text="${boardType.boardName}"></a>
+					</li>
 
 						<!-- 관리자 게시판 -->
 						<li class="navList"
