[Update, FIX] 관리자가 일반 게시판 글도 삭제할 수 있는 기능으로 수정, 개발자모드에서 발생한 JS 에러 수정

--- a/semiProject/src/main/resources/templates/board/boardDetail.html
+++ b/semiProject/src/main/resources/templates/board/boardDetail.html
@@ -76,7 +76,7 @@
         </button>
         <button
           id="delete-btn"
-          th:if="${session.loginMember != null and session.loginMember.memberNo == boardInfo.memberNo}"
+          th:if="${session.loginMember != null and (session.loginMember.authority == 2 or session.loginMember.memberNo == boardInfo.memberNo)}"
         >
           삭제
         </button>
