--- a/semiProject/src/main/resources/templates/board/boardList.html
+++ b/semiProject/src/main/resources/templates/board/boardList.html
@@ -292,8 +292,9 @@
         /*[[${session.loginMember?.memberNo}]]*/ "로그인한 회원 번호";
       const boardList = /*[[${freeBoardList}]]*/ "보드 정보";
       const loginMemberAuthority =
-        /*[[${session.loginMember?.authority}]]*/
-        console.log(`보드 리스트 : ${JSON.stringify(boardList)}`);
+        /*[[${session.loginMember?.authority}]]*/ "권한정보";
+
+      // console.log(`보드 리스트 : ${JSON.stringify(boardList)}`);
       // {"boardNo":2067,"boardTitle":"1234","boardContent":null,"boardWriteDate":"15분 전","boardUpdateDate":null,"readCount":1,"boardDelFl":"\u0000","boardPw":null,"boardLock":"Y","boardCode":0,"memberNo":0,"imgPath":null,"imgRename":null,"memberNickname":"제누요","likeCount":0,"likeCheck":0,"scrapCheck":0,"thumbnailPath":null}
     </script>
   </body>
