정보게시판 기능 1차 구현

--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -33,7 +33,7 @@
 
 					<!-- 정보게시판 -->
 					<li class="navList" th:if="${boardType.boardCode == 2}">
-						<a th:href="@{/info/list}" th:text="${boardType.boardName}"></a>
+    					<a th:href="@{/info/listPage}" th:text="${boardType.boardName}"></a>
 					</li>
 
 					<!-- 일반 게시판 -->
